--- a/index.html
+++ b/index.html
@@ -5,63 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a lang="en" href="">Web studio</a>
-        <ul>
+        <a lang="en" href="" class="logo">
+          <span class="logo-name">Web</span>
+          Studio</a
+        >
+        <ul class="site-nav">
           <li>
-            <a href="">Студия</a>
+            <a href="" class="link">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Преимущества</h2>
+      <section class="section">
+        <h2 class="title">Преимущества</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title-benefits">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title-benefits">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title-benefits">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title-benefits">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -69,8 +75,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -98,8 +104,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -108,7 +114,7 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title-name">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -118,7 +124,7 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="title-name">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -128,7 +134,7 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="title-name">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -138,29 +144,32 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="title-name">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a lang="en" href="">Web studio</a>
+    <footer class="footer">
+      <a lang="en" href="" class="logo"
+        ><span class="logo-name">Web</span>Studio</a
+      >
       <address>
-        <ul>
+        <ul class="footer-contacts">
           <li>
             <a
               href="https://goo.gl/maps/VYor2QJVqiVH9sgh6"
               target="_blank"
               rel="noopener noreferrer"
+              class="adress"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
