--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
         <h2 class="title">Преимущества</h2>
         <ul class="benefist-list list">
           <li class="benefits-item">
-            <h3 class="benefits-title">Внимание к деталям</h3>
+            <h3 class="benefits-title title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li class="benefits-item">
-            <h3 class="benefits-title">Пунктуальность</h3>
+            <h3 class="benefits-title title">Пунктуальность</h3>
             <p class="description">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li class="benefits-item">
-            <h3 class="benefits-title">Планирование</h3>
+            <h3 class="benefits-title title">Планирование</h3>
             <p class="description">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="benefits-title">Современные технологии</h3>
+            <h3 class="benefits-title title">Современные технологии</h3>
             <p class="description">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
