--- a/portfolio.html
+++ b/portfolio.html
@@ -45,43 +45,138 @@
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Портфолио</h1>
-        <ul>
-          <li>
+      <section class="project section">
+        <h1 class="title">Портфолио</h1>
+        <ul class="buutton-list">
+          <li class="button-item">
             <button type="button" class="button button-secondary">Все</button>
           </li>
-          <li>
+          <li class="button-item">
             <button type="button" class="button button-secondary">
               Веб-сайты
             </button>
           </li>
-          <li>
+          <li class="buttont-item">
             <button type="button" class="button button-secondary">
               Приложения
             </button>
           </li>
-          <li>
+          <li class="button-item">
             <button type="button" class="button button-secondary">
               Дизайн
             </button>
           </li>
-          <li>
+          <li class="button-item">
             <button type="button" class="button button-secondary">
               Маркетинг
             </button>
           </li>
         </ul>
-        <ul>
-          <li><img src="./images/img-1.jpg" alt="страница в браузере" /></li>
-          <li><img src="./images/img-2.jpg" alt="играют в баскетбол" /></li>
-          <li><img src="./images/img-3.jpg" alt="рыба" /></li>
-          <li><img src="./images/img-4.jpg" alt="наушники" /></li>
-          <li><img src="./images/img-5.jpg" alt="коробки" /></li>
-          <li><img src="./images/img-6.jpg" alt="монитор" /></li>
-          <li><img src="./images/img-7.jpg" alt="книга" /></li>
-          <li><img src="./images/img-8.jpg" alt="эмблема" /></li>
-          <li><img src="./images/img-9.jpg" alt="печатает на ноутбуке" /></li>
+        <ul class="project-list">
+          <li class="project-item">
+            <img
+              src="./images/img-1.jpg"
+              alt="страница в браузере"
+              width="370px"
+              height="294px"
+            />
+            <h2 class="project-title title">Технокряк</h2>
+            <p class="project-name">Веб-сайт</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-2.jpg"
+              alt="играют в баскетбол"
+              width="370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="project-name">Дизайн</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-3.jpg"
+              alt="рыба"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="project-name">Приложение</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-4.jpg"
+              alt="наушники"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Проект <span lang="en">Prime</span>
+            </h2>
+            <p>Маркетинг</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-5.jpg"
+              alt="коробки"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Проект <span lang="en">Boxes</span>
+            </h2>
+            <p class="project-name">Приложение</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-6.jpg"
+              alt="монитор"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 lang="en" class="project-title title">
+              Inspiration has no Borders
+            </h2>
+            <p class="project-name">Веб-сайт</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-7.jpg"
+              alt="книга"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Издание <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="project-name">Дизайн</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-8.jpg"
+              alt="эмблема"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 class="project-title title">
+              Проект <span lang="en">LAB</span>
+            </h2>
+            <p class="project-name">Маркетинг</p>
+          </li>
+          <li class="project-item">
+            <img
+              src="./images/img-9.jpg"
+              alt="печатает на ноутбуке"
+              width=" 370px"
+              height="294px"
+            />
+            <h2 lang="en" class="project-title title">Growing Business</h2>
+            <p class="project-name">Приложение</p>
+          </li>
         </ul>
       </section>
     </main>
