--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,8 @@
             <img
               src="./images/img-1.jpg"
               alt="страница в браузере"
-              width="370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">Технокряк</h2>
             <p class="project-name">Веб-сайт</p>
@@ -87,8 +87,8 @@
             <img
               src="./images/img-2.jpg"
               alt="играют в баскетбол"
-              width="370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -96,12 +96,7 @@
             <p class="project-name">Дизайн</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-3.jpg"
-              alt="рыба"
-              width=" 370px"
-              height="294px"
-            />
+            <img src="./images/img-3.jpg" alt="рыба" width="370" height="294" />
             <h2 class="project-title title">
               Ресторан <span lang="en">Seafood</span>
             </h2>
@@ -111,8 +106,8 @@
             <img
               src="./images/img-4.jpg"
               alt="наушники"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">
               Проект <span lang="en">Prime</span>
@@ -123,8 +118,8 @@
             <img
               src="./images/img-5.jpg"
               alt="коробки"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">
               Проект <span lang="en">Boxes</span>
@@ -135,8 +130,8 @@
             <img
               src="./images/img-6.jpg"
               alt="монитор"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 lang="en" class="project-title title">
               Inspiration has no Borders
@@ -147,8 +142,8 @@
             <img
               src="./images/img-7.jpg"
               alt="книга"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">
               Издание <span lang="en">Limited Edition</span>
@@ -159,8 +154,8 @@
             <img
               src="./images/img-8.jpg"
               alt="эмблема"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 class="project-title title">
               Проект <span lang="en">LAB</span>
@@ -171,8 +166,8 @@
             <img
               src="./images/img-9.jpg"
               alt="печатает на ноутбуке"
-              width=" 370px"
-              height="294px"
+              width="370"
+              height="294"
             />
             <h2 lang="en" class="project-title title">Growing Business</h2>
             <p class="project-name">Приложение</p>
