--- a/portfolio.html
+++ b/portfolio.html
@@ -74,103 +74,126 @@
         </ul>
         <ul class="project-list">
           <li class="project-item">
-            <img
-              src="./images/img-1.jpg"
-              alt="страница в браузере"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">Технокряк</h2>
-            <p class="project-name">Веб-сайт</p>
+            <a href=""
+              ><img
+                src="./images/img-1.jpg"
+                alt="страница в браузере"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">Технокряк</h2>
+              <p class="project-name">Веб-сайт</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-2.jpg"
-              alt="играют в баскетбол"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h2>
-            <p class="project-name">Дизайн</p>
+            <a href=""
+              ><img
+                src="./images/img-2.jpg"
+                alt="играют в баскетбол"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="project-name">Дизайн</p></a
+            >
           </li>
           <li class="project-item">
-            <img src="./images/img-3.jpg" alt="рыба" width="370" height="294" />
-            <h2 class="project-title title">
-              Ресторан <span lang="en">Seafood</span>
-            </h2>
-            <p class="project-name">Приложение</p>
+            <a href=""
+              ><img
+                src="./images/img-3.jpg"
+                alt="рыба"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Ресторан <span lang="en">Seafood</span>
+              </h2>
+              <p class="project-name">Приложение</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-4.jpg"
-              alt="наушники"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">
-              Проект <span lang="en">Prime</span>
-            </h2>
-            <p>Маркетинг</p>
+            <a href=""
+              ><img
+                src="./images/img-4.jpg"
+                alt="наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Проект <span lang="en">Prime</span>
+              </h2>
+              <p>Маркетинг</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-5.jpg"
-              alt="коробки"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">
-              Проект <span lang="en">Boxes</span>
-            </h2>
-            <p class="project-name">Приложение</p>
+            <a href=""
+              ><img
+                src="./images/img-5.jpg"
+                alt="коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Проект <span lang="en">Boxes</span>
+              </h2>
+              <p class="project-name">Приложение</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-6.jpg"
-              alt="монитор"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en" class="project-title title">
-              Inspiration has no Borders
-            </h2>
-            <p class="project-name">Веб-сайт</p>
+            <a href=""
+              ><img
+                src="./images/img-6.jpg"
+                alt="монитор"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="project-title title">
+                Inspiration has no Borders
+              </h2>
+              <p class="project-name">Веб-сайт</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-7.jpg"
-              alt="книга"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">
-              Издание <span lang="en">Limited Edition</span>
-            </h2>
-            <p class="project-name">Дизайн</p>
+            <a href=""
+              ><img
+                src="./images/img-7.jpg"
+                alt="книга"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Издание <span lang="en">Limited Edition</span>
+              </h2>
+              <p class="project-name">Дизайн</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-8.jpg"
-              alt="эмблема"
-              width="370"
-              height="294"
-            />
-            <h2 class="project-title title">
-              Проект <span lang="en">LAB</span>
-            </h2>
-            <p class="project-name">Маркетинг</p>
+            <a href=""
+              ><img
+                src="./images/img-8.jpg"
+                alt="эмблема"
+                width="370"
+                height="294"
+              />
+              <h2 class="project-title title">
+                Проект <span lang="en">LAB</span>
+              </h2>
+              <p class="project-name">Маркетинг</p></a
+            >
           </li>
           <li class="project-item">
-            <img
-              src="./images/img-9.jpg"
-              alt="печатает на ноутбуке"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en" class="project-title title">Growing Business</h2>
-            <p class="project-name">Приложение</p>
+            <a href=""
+              ><img
+                src="./images/img-9.jpg"
+                alt="печатает на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="project-title title">Growing Business</h2>
+              <p class="project-name">Приложение</p></a
+            >
           </li>
         </ul>
       </section>
