--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
         </ul>
         <ul class="project-list">
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-1.jpg"
                 alt="страница в браузере"
@@ -86,7 +86,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-2.jpg"
                 alt="играют в баскетбол"
@@ -100,7 +100,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-3.jpg"
                 alt="рыба"
@@ -114,7 +114,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-4.jpg"
                 alt="наушники"
@@ -124,11 +124,11 @@
               <h2 class="project-title title">
                 Проект <span lang="en">Prime</span>
               </h2>
-              <p>Маркетинг</p></a
+              <p class="project-name">Маркетинг</p></a
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-5.jpg"
                 alt="коробки"
@@ -142,7 +142,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-6.jpg"
                 alt="монитор"
@@ -156,7 +156,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-7.jpg"
                 alt="книга"
@@ -170,7 +170,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-8.jpg"
                 alt="эмблема"
@@ -184,7 +184,7 @@
             >
           </li>
           <li class="project-item">
-            <a href=""
+            <a href="" class="link"
               ><img
                 src="./images/img-9.jpg"
                 alt="печатает на ноутбуке"
